--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "start": "node server.js",
     "dev": "node server.js"
   },
-  "keywords": ["game", "chess", "multiplayer"],
+  "keywords": [
+    "game",
+    "chess",
+    "multiplayer"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "exa-mcp-server": "^3.1.1",
     "express": "^5.1.0",
     "socket.io": "^4.8.1"
   }
